--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "apexcharts": "^3.35.4",
     "ng-apexcharts": "^1.7.1",
     "rxjs": "~7.5.0",
